--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 						<li><a href="#" on-click="zoom-out"><kbd class="pull-right">−</kbd><span><i class="fa fa-fw fa-search-minus"></i>&nbsp;Уменьшить</span></a></li>
 						<li><a href="#" on-click="fit-all">Показать всё</a></li>
 						<li><a href="#" on-click="fit-this"><kbd class="pull-right">Alt F</kbd><span>Показать объект</span></a></li>
-						<li class="divider"></li>
-						<li><a href="#" on-click="toggle-storyboard"><i class="fa fa-fw {{panels.storyboard ? 'fa-check' : ''}}"></i>&nbsp;Презентация</a></li>
+						<!--li class="divider"></li>
+						<li><a href="#" on-click="toggle-storyboard"><i class="fa fa-fw {{panels.storyboard ? 'fa-check' : ''}}"></i>&nbsp;Презентация</a></li-->
 					</ul>
 				</li>
 				<!--li class="dropdown">
